 $Id: ChangeLog,v 1.131.2.25.2.101 2010/09/30 13:24:59 uehira Exp $

2010-09-30  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvstatus2.c : added daemon mode. 64bit check.
	* src/relay.c : 64 bit clean?
	* src/udp_accept.c : udp_accept4()
	* src/udp_dest.c : udp_dest4()
	* Version 2.1.9 released.

2010-09-29  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib_log.c : Shm_read(), Shm_create()
	* src/winlib.c : Shm_read_offline(), Shm_create_offline()

2010-09-27  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : check struct statfs.f_bavail size.
	    dirent.h : check include file, and defined DIRNAMLEN macro.
	    update checking methods : socklen_t, struct tm.tm_gmtoff
	* src/events.c : 64 bit clean?
	* src/wdisk.c : check __SVR4 and __NetBSD__.
	* update autotools
	  autoconf-2.67
	  automake-1.10
	  libtool-2.2.10
	* Version 2.1.8 released.

2010-09-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/pmon.c : 64 bit clean?
	* src/evdetect.c : 64 bit clean?
	* src/ras2util.c : join 'ras2lips.c' and 'ras2rpdl.c'. 64bit check.

2010-09-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/extraw.c : 64 bit clean.
	* src/send_raw_old.c : 64 bit clean?
	* src/final2finalb.c : 64bit check.
	* src/finalb2final.c : 64bit check.
	* src/finalb2seis.c : 64bit check.
	* src/find_picks.c : 64bit check.
	* src/pick2final.c : 64bit check.
	* src/pick2finalb.c : 64bit check.
	* src/pick2tseis.c : 64bit check.
	* while(1) --> for(;;)
	* adj_sec() moved to 'src/winlib.c'.
	  src/final2finalb.c, src/pick2finalb.c
	  win.c : adj_sec() --> adj_sec_win()
	* read_param() ---> read_param_line() [src/winlib.c]
	  src/evdetect.c, src/events.c, src/pmon.c, src/setexb.c, src/wtape.c

2010-09-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/send_raw.c : 64 bit clean?

2010-09-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wadd2.c : 64 bit clean.
	* src/rtape.c : 64 bit clean.
	* src/wtime.c : 64 bit clean.
	* src/wck_wdisk.c : 64 bit clean.